test/ui/src/compile_fail/std/emit_props_tpl.rs
fn main() {
    emit::emit!("template", tpl: "template");
}
